# retail-data-pipeline

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
airflow/: .env  Dockerfile  docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: dbt_pipeline.py  ingest_data_samples_to_gcs.py  load_gcs_to_bq.py  retail_pipeline.py
data_samples/: order_items.csv  orders.csv  products.csv  sessions.csv  users.csv
dbt/retail/: .user.yml  README.md  dbt_project.yml  packages.yml  profiles.yml
dbt/retail/macros/: time_parsing.sql
dbt/retail/models/bronze/: bronze__orders.sql  bronze__users.sql  schema.yml  sources.yml
dbt/retail/models/gold/: gold__daily_branch_metrics.sql  schema.yml
dbt/retail/models/silver/: schema.yml  silver__orders_enriched.sql
infra/: main.tf  variables.tf
scripts/: gen_sample_date.py
