[project]
name = "retail-data-pipeline"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
  # Airflow 3.0 core + Google provider
  "apache-airflow==3.0.0",
  "apache-airflow-providers-google>=12.0.0",

  # dbt + BigQuery
  "dbt-bigquery==1.8.2",

  # GCP SDK & utils
  "google-cloud-bigquery>=3.25.0",
  "google-cloud-storage>=2.18.0",
  "pandas>=2.2.2",
  "pyarrow>=17.0.0",
]
